--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/m3t4m1k3/fullstackopen-part3#readme",
   "devDependencies": {
     "kill-port": "^2.0.1",
+    "morgan": "^1.10.0",
     "nodemon": "^2.0.19"
   },
   "dependencies": {
