--- a/package.json
+++ b/package.json
@@ -23,8 +23,9 @@
     "nodemon": "^2.0.19"
   },
   "dependencies": {
-    "express": "^4.18.1",
     "cors": "^2.8.5",
+    "express": "^4.18.1",
+    "mongoose": "^6.5.2",
     "morgan": "^1.10.0"
   },
   "prettier": {
