--- a/package.json
+++ b/package.json
@@ -15,6 +15,10 @@
   "author": "Michael McGee",
   "license": "ISC",
   "devDependencies": {
+    "@types/cors": "^2.8.12",
+    "@types/express": "^4.17.13",
+    "@types/mongoose": "^5.11.97",
+    "@types/morgan": "^1.9.3",
     "nodemon": "^2.0.19"
   },
   "dependencies": {
