--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "eslint ."
   },
   "repository": {
     "type": "git",
@@ -19,6 +20,7 @@
     "@types/express": "^4.17.13",
     "@types/mongoose": "^5.11.97",
     "@types/morgan": "^1.9.3",
+    "eslint": "^8.22.0",
     "nodemon": "^2.0.19"
   },
   "dependencies": {
@@ -27,12 +29,5 @@
     "express": "^4.18.1",
     "mongoose": "^6.5.2",
     "morgan": "^1.10.0"
-  },
-  "prettier": {
-    "tabWidth": 2,
-    "semi": true,
-    "arrowParens": "always",
-    "trailingComma": "es5",
-    "singleQuote": true
   }
 }
