--- a/package.json
+++ b/package.json
@@ -6,12 +6,12 @@
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js",
+    "build:ui": "rm -rf build && cd ../frontend/ && npm run build && cp -r build ../backend",
+    "deploy": "git push heroku master",
+    "deploy:full": "npm run build:ui && git add . && git commit -m uibuild && git push && npm run deploy",
+    "logs:prod": "heroku logs --tail",
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "eslint ."
-  },
-  "repository": {
-    "type": "git",
-    "url": "githttps://github.com/m3t4m1k3/fullstackopen-phonebook-backend.git"
   },
   "author": "Michael McGee",
   "license": "ISC",
